tests/invalid/simple/List_CompileFail_2.whiley
void System::main([string] args):
     x = a2[0]
